--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.logo {
+  width: 120px;
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
+.logo-text{
+  color: #fff;
+  margin-top: -16px;
+  text-transform: uppercase;
+  font-size: medium;
   text-align: center;
+  font-weight: bold;
+  
+}  
+.site-layout-background {
+  background: #eeeeee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tictactoe-box {
+  background: #fff;
+  border-color: #777;
+  border-style: solid;
+  font-size: calc((min(70vh,100vw) - 100px)/3);
+  line-height: calc(((min(70vh,100vw) - 100px)/3) - 30px);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#game {
+  display: inline-grid;
+  grid-template-rows: repeat(3, calc((min(70vh,100vw) - 100px)/3));
+  grid-template-columns: repeat(3, calc((min(70vh,100vw) - 100px)/3));
+  height: calc(min(70vh,100vw) - 100px);
+  width: calc(min(70vh,100vw) - 100px);
 }
